  - Moving tables works 
  - Resizing rows and cols works
  - Selecting cells works

Reggie, 13.1.1999:
------------------
- Tons of fixes and improvements
- Improvements for tables and headers/footers
- If the text of a frameset doesn't fit into the frames anymore, and no new frames should be appended,
  the last frame gets, if possible, automatically resized now (this is default for table cells and headers/footers)
- Cleanup of framedia

Reggie, 14.1.1999:
------------------
- Fixes
- When inserting a new parag (after pressing return) and current paragLayout->name() == following paragLayout->name()
  a copy of the current paragLayout is assigned to the new parag. 
- Tables can flow over multiple pages now
- Saving and Loading tabes works now
- Destructor doesn't crash anymore :-)) (at least on my system)

Reggie, 15.1.1999:
------------------
- More work on table flowing over multiple pages
- Some fixes with moving/resizing frames
- Added dialog for initial table settings and configurating tables (currently only used for initial settings)
- replacing KNumericSpinBoxes with QSpinBoxes, because QSpinBoxes look much nicer

Reggie, 17.1.1999:
------------------
- Fix of a strange bug in KWordView::colorToPixString
- Some other small fixes
- Added menu switch for enabling/disabling showing of table grid
- Selecting multiple frames (esp. table cells) is more comfortable now 
- It's possible to configure borders (color, width and style) for frames now => table cells can have these borders too
- Implemented loading/saving frame borders
- Implemented printing frame borders

Reggie, 18.1.1999:
------------------
- Some formatting fixes
- Preperations for more formatting and settings of frames and tables

Reggie, 19.1.1999:
------------------
- Code cleanups
- Internal work for background colors of frames
- Fixes when moving around frames to avoid crashes
- Fixed (or worked around :-) the strange bug when saving embedded objects
